Fix 'select the correct port' message being hidden by dark mode

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -466,10 +466,10 @@ ul > hr {
 
 .bp-client-available {
   background:none;
-  border:1px solid rgba(0, 0, 0, 0);
+  border:1px solid rgba(110, 107, 107, 0);
   border-radius:4px;
   box-sizing:border-box;
-  color:#333 !important;
+  color:rgb(250, 243, 243) !important;
   display:inline;
   font-size:14px;
   height:auto;
